--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -192,8 +192,8 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="2:49" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="31" id="qyz-Yg-Sp0">
-                                <rect key="frame" x="828" y="8" width="113" height="54"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="00:00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="31" id="qyz-Yg-Sp0">
+                                <rect key="frame" x="719" y="8" width="222" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="54"/>
                                 <color key="textColor" red="0.68055791440217384" green="0.016372919173248759" blue="0.0083494394268643479" alpha="1" colorSpace="calibratedRGB"/>
@@ -211,6 +211,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="startTimerPressed:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="Z9B-6a-Hqz"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lR4-ya-Kfx">
                                 <rect key="frame" x="946" y="37" width="72" height="37"/>
@@ -223,6 +226,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="pauseTimerPressed:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="MGl-Fw-cZj"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MfW-Vg-77e">
                                 <rect key="frame" x="946" y="73" width="72" height="37"/>
@@ -235,6 +241,9 @@
                                 <state key="highlighted">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="stopTimerPressed:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="geT-mV-0KD"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="yTC-t9-hQ0">
                                 <rect key="frame" x="209" y="612" width="97" height="31"/>
@@ -301,6 +310,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="categoryButton" destination="Xpb-la-gyS" id="856-O8-Y8T"/>
+                        <outlet property="elapsedTimeLabel" destination="qyz-Yg-Sp0" id="olD-SH-hNv"/>
                         <outlet property="exerciseComponentPicker" destination="aRB-ah-VHx" id="04z-jo-lvz"/>
                         <outlet property="tableView" destination="d0F-xQ-7jB" id="PpB-q3-VoV"/>
                     </connections>
@@ -345,7 +355,11 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseViewController.h"/>
             <relationships>
                 <relationship kind="action" name="addExercise:"/>
+                <relationship kind="action" name="pauseTimerPressed:"/>
+                <relationship kind="action" name="startTimerPressed:"/>
+                <relationship kind="action" name="stopTimerPressed:"/>
                 <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="elapsedTimeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="exerciseComponentPicker" candidateClass="UIPickerView"/>
                 <relationship kind="outlet" name="tableDelegate" candidateClass="ExerciseTableDelegate"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
