--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -99,24 +99,20 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="tbB-7R-YMg">
-                                                    <rect key="frame" x="20" y="12" width="44" height="44"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Editing" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ClX-st-uAg">
+                                                    <rect key="frame" x="14" y="12" width="53" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                                    <state key="normal" title=">">
-                                                        <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <state key="highlighted">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <connections>
                                             <outlet property="bodyPart" destination="SyQ-Dv-rfh" id="3bw-r2-uee"/>
                                             <outlet property="category" destination="xzf-sg-hMi" id="VlO-Mw-sdd"/>
+                                            <outlet property="editingMode" destination="ClX-st-uAg" id="y3g-hb-soM"/>
                                             <outlet property="intensity" destination="Wb9-qu-VX4" id="zql-r5-2ET"/>
                                             <outlet property="name" destination="9D7-Hw-MfG" id="zgC-cQ-2L4"/>
                                             <outlet property="reps" destination="pgD-Ip-Nun" id="ER8-CQ-csh"/>
@@ -335,37 +331,6 @@
             <point key="canvasLocation" x="-1718" y="-256"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="ExerciseCell" superclassName="UITableViewCell">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseCell.h"/>
-            <relationships>
-                <relationship kind="outlet" name="bodyPart" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="category" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="intensity" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="name" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="reps" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="rest" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="weight" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-        <class className="ExerciseTableDelegate" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseTableDelegate.h"/>
-        </class>
-        <class className="ExerciseViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ExerciseViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="addExercise:"/>
-                <relationship kind="action" name="pauseTimerPressed:"/>
-                <relationship kind="action" name="startTimerPressed:"/>
-                <relationship kind="action" name="stopTimerPressed:"/>
-                <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="elapsedTimeLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="exerciseComponentPicker" candidateClass="UIPickerView"/>
-                <relationship kind="outlet" name="tableDelegate" candidateClass="ExerciseTableDelegate"/>
-                <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation" orientation="landscapeRight"/>
