--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -92,18 +92,11 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rest" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="58e-l2-pTA">
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Rest" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="22" id="58e-l2-pTA">
                                                     <rect key="frame" x="455" y="40" width="86" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </label>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Editing" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ClX-st-uAg">
-                                                    <rect key="frame" x="14" y="12" width="53" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <color key="textColor" red="0.028213153480168549" green="0.15249687835612299" blue="0.78870159646739135" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                             </subviews>
@@ -112,7 +105,6 @@
                                         <connections>
                                             <outlet property="bodyPart" destination="SyQ-Dv-rfh" id="3bw-r2-uee"/>
                                             <outlet property="category" destination="xzf-sg-hMi" id="VlO-Mw-sdd"/>
-                                            <outlet property="editingMode" destination="ClX-st-uAg" id="y3g-hb-soM"/>
                                             <outlet property="intensity" destination="Wb9-qu-VX4" id="zql-r5-2ET"/>
                                             <outlet property="name" destination="9D7-Hw-MfG" id="zgC-cQ-2L4"/>
                                             <outlet property="reps" destination="pgD-Ip-Nun" id="ER8-CQ-csh"/>
