--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -271,11 +271,11 @@
                                     <action selector="addExercise:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="XSv-w0-od3"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Qxb-mG-qpA">
-                                <rect key="frame" x="676" y="238" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Qxb-mG-qpA">
+                                <rect key="frame" x="676" y="126" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Start">
+                                <state key="normal" title="Start" image="button_black_play.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -286,11 +286,11 @@
                                     <action selector="startTimerPressed:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="Z9B-6a-Hqz"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lR4-ya-Kfx">
-                                <rect key="frame" x="25" y="190" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lR4-ya-Kfx">
+                                <rect key="frame" x="28" y="82" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Pause">
+                                <state key="normal" title="Pause" image="button_black_pause.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -301,11 +301,11 @@
                                     <action selector="pauseTimerPressed:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="MGl-Fw-cZj"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MfW-Vg-77e">
-                                <rect key="frame" x="25" y="244" width="72" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="MfW-Vg-77e">
+                                <rect key="frame" x="28" y="163" width="64" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Stop">
+                                <state key="normal" title="Stop" image="button_black_stop.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -440,11 +440,39 @@
                                     <action selector="randomiseWeight:" destination="3Jg-20-Tn5" eventType="touchUpInside" id="g29-ba-ant"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="vCQ-W6-9Fe">
-                                <rect key="frame" x="168" y="0.0" width="366" height="48"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Exercise" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="vCQ-W6-9Fe">
+                                <rect key="frame" x="72" y="-2" width="366" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
                                 <color key="textColor" red="0.77772241709183676" green="0.73516581365439748" blue="0.13020978000877462" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Intensity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="2gl-IJ-uaE">
+                                <rect key="frame" x="30" y="238" width="229" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                <color key="textColor" red="1" green="0.67813305199999996" blue="0.31818759149999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Body part" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="fDW-3w-PyX">
+                                <rect key="frame" x="275" y="243" width="230" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                <color key="textColor" red="1" green="0.67813305199999996" blue="0.31818759149999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Weight" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="qx5-gC-fl4">
+                                <rect key="frame" x="513" y="243" width="146" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                <color key="textColor" red="1" green="0.67813305199999996" blue="0.31818759149999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Reps" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="XVu-1N-dkH">
+                                <rect key="frame" x="466" y="13" width="154" height="55"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="40"/>
+                                <color key="textColor" red="1" green="0.67813305199999996" blue="0.31818759149999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -455,9 +483,17 @@
                         <outlet property="addNewBodyPart" destination="I3f-pc-oJe" id="fYP-Br-cag"/>
                         <outlet property="addNewExerciseType" destination="yTC-t9-hQ0" id="Txy-rL-rlc"/>
                         <outlet property="categoryButton" destination="Xpb-la-gyS" id="dmr-IC-X5a"/>
+                        <outlet property="currentBodyPartInTimer" destination="fDW-3w-PyX" id="piI-Sh-lZg"/>
+                        <outlet property="currentExerciseInTimer" destination="vCQ-W6-9Fe" id="l5N-jl-2xg"/>
+                        <outlet property="currentIntensityInTimer" destination="2gl-IJ-uaE" id="s9n-7n-oZ5"/>
+                        <outlet property="currentRepsInTimer" destination="XVu-1N-dkH" id="RYq-Ys-trg"/>
+                        <outlet property="currentWeightInTimer" destination="qx5-gC-fl4" id="h0x-T0-aUx"/>
                         <outlet property="elapsedTimeLabel" destination="qyz-Yg-Sp0" id="olD-SH-hNv"/>
                         <outlet property="exerciseComponentPicker" destination="aRB-ah-VHx" id="04z-jo-lvz"/>
                         <outlet property="tableView" destination="d0F-xQ-7jB" id="PpB-q3-VoV"/>
+                        <outlet property="timerPauseButton" destination="lR4-ya-Kfx" id="vwD-bd-ciU"/>
+                        <outlet property="timerStartButton" destination="Qxb-mG-qpA" id="XiG-st-R4w"/>
+                        <outlet property="timerStopButton" destination="MfW-Vg-77e" id="Eye-gT-FRo"/>
                         <outlet property="weightOrTime" destination="uav-Mp-Bhf" id="3Hd-lJ-R0e"/>
                     </connections>
                 </viewController>
@@ -468,7 +504,10 @@
     <resources>
         <image name="MB_0018_viewer.png" width="256" height="256"/>
         <image name="button_black_ffw.png" width="128" height="128"/>
+        <image name="button_black_pause.png" width="128" height="128"/>
+        <image name="button_black_play.png" width="128" height="128"/>
         <image name="button_black_rew.png" width="128" height="128"/>
+        <image name="button_black_stop.png" width="128" height="128"/>
         <image name="clock44x44.png" width="44" height="44"/>
         <image name="weights44x44.png" width="44" height="44"/>
     </resources>
@@ -523,11 +562,19 @@
                 <relationship kind="outlet" name="addNewBodyPart" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="addNewExerciseType" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="currentBodyPartInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="currentExerciseInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="currentIntensityInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="currentRepsInTimer" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="currentWeightInTimer" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="elapsedTimeLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="exerciseComponentPicker" candidateClass="UIPickerView"/>
                 <relationship kind="outlet" name="pickerDelegate" candidateClass="ExercisePickerDelegate"/>
                 <relationship kind="outlet" name="tableDelegate" candidateClass="ExerciseTableDelegate"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="timerPauseButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerStartButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="timerStopButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="weightOrTime" candidateClass="UISegmentedControl"/>
             </relationships>
         </class>
