--- a/SampleMultiview/Storyboard.storyboard
+++ b/SampleMultiview/Storyboard.storyboard
@@ -111,7 +111,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="nothing next" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" id="nGb-X9-UnE">
-                                        <rect key="frame" x="100" y="768" width="626" height="211"/>
+                                        <rect key="frame" x="100" y="768" width="626" height="177"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="55"/>
                                         <color key="textColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
@@ -177,6 +177,21 @@
                                             <action selector="pauseButtonPressed:" destination="ZI4-Ty-Ick" eventType="touchUpInside" id="6W7-Za-J0K"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="t2F-TO-N9e">
+                                        <rect key="frame" x="20" y="947" width="728" height="37"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="Program">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <segue destination="3Jg-20-Tn5" kind="modal" id="xGJ-k7-CsS"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </view>
                         </subviews>
@@ -197,7 +212,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="-3496" y="239"/>
+            <point key="canvasLocation" x="-3008" y="372"/>
         </scene>
         <!--Program View Controller - Exercises-->
         <scene sceneID="JS7-81-UZg">
@@ -551,6 +566,7 @@
                 <relationship kind="action" name="randomiseRest:"/>
                 <relationship kind="action" name="randomiseSets:"/>
                 <relationship kind="action" name="randomiseWeight:"/>
+                <relationship kind="action" name="weightOrTimeChosen:"/>
                 <relationship kind="outlet" name="addNewBodyPart" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="addNewExerciseType" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="categoryButton" candidateClass="UISegmentedControl"/>
